welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: not found: value Colo
    setCouleurBrosse(Colo.YELLOW)
                     ^MethodsPicture:30: error: not found: value Colo
    setCouleurBrosse(Colo.RED)
                     ^MethodsPicture:32: error: not found: value Colo
    setCouleurBrosse(Colo.BLUE)
                     ^MethodsPicture:34: error: not found: value Colo
    setCouleurBrosse(Colo.GREEN)
                     ^MethodsPicture:3: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPicture'
override def run() {
             ^