welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
}
override def run() {
}

def fairev(){
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  left()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  right()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  avance()
  left()
  }

def rec() {
  for (a<-1 to 3){
    setCouleurBrosse(Colo.YELLOW)
    fairev()
    setCouleurBrosse(Colo.RED)
    fairev()
    setCouleurBrosse(Colo.BLUE)
    fairev()
    setCouleurBrosse(Colo.GREEN)
    avance()
    avance()
    avance()
    avance()
    avance()
  }
  left()
  avance()
  avance()
  avance()
  avance()
  avance()
  right()
  
}